# paycash_test_task

./: README.md  docker-compose.yml
main/: Dockerfile  alembic.ini  pyproject.toml  resetdb.sh  start.sh
main/alembic/: env.py
main/app/: main.py
main/app/adapters/: __init__.py  framework.py
main/app/api/: api.py
main/app/api/v1/: api.py
main/app/api/v1/endpoints/: transaction.py  user.py
main/app/config/: database.py  settings.py
main/app/models/: transaction.py  user.py
main/app/schemas/: __init__.py  logger.py  transaction.py  user.py
main/app/services/: __init__.py  transaction.py  user.py
main/app/storage/: __init__.py  transaction.py  user.py
main/tests/: test_api.py
